@@ -27,7 +27,7 @@
  */
 package org.hisp.dhis.analytics.data;
 
-import static java.util.stream.Collectors.toList;
+import static java.util.Objects.requireNonNull;
 import static org.apache.commons.collections4.CollectionUtils.addIgnoreNull;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
@@ -64,6 +64,7 @@ import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.analytics.AnalyticsSecurityManager;
 import org.hisp.dhis.analytics.DataQueryParams;
@@ -174,7 +175,7 @@ public class DefaultDataQueryService implements DataQueryService {
   @Override
   @Transactional(readOnly = true)
   public DataQueryParams getFromAnalyticalObject(AnalyticalObject object) {
-    Objects.requireNonNull(object);
+    requireNonNull(object);
 
     DataQueryParams.Builder params = DataQueryParams.newBuilder();
 
@@ -290,7 +291,7 @@ public class DefaultDataQueryService implements DataQueryService {
           getItemsFromParam(userOrgUnit).stream()
               .map(ou -> idObjectManager.get(OrganisationUnit.class, ou))
               .filter(Objects::nonNull)
-              .collect(toList()));
+              .toList());
     } else if (currentUser != null && params != null && params.getUserOrgUnitType() != null) {
       switch (params.getUserOrgUnitType()) {
         case DATA_CAPTURE:
@@ -361,6 +362,21 @@ public class DefaultDataQueryService implements DataQueryService {
     }
 
     return list;
+  }
+
+  /**
+   * Based on the given parameters, this method will return a list of {@link OrganisationUnit} UIDs
+   * based on the given items and user organisation units.
+   *
+   * @param items the list of items that might be included into the resulting organisation unit and
+   *     its keywords.
+   * @param userOrgUnits the list of organisation units associated with the current user.
+   * @return a list of {@link OrganisationUnit} UIDs.
+   */
+  @Override
+  public List<String> getOrgUnitDimensionUid(
+      List<String> items, List<OrganisationUnit> userOrgUnits) {
+    return dimensionalObjectProducer.getOrgUnitDimensionUid(items, userOrgUnits);
   }
 
   /**
@@ -441,6 +457,6 @@ public class DefaultDataQueryService implements DataQueryService {
     return items.stream()
         .map(item -> idObjectManager.getObject(CategoryOptionCombo.class, inputIdScheme, item))
         .filter(Objects::nonNull)
-        .collect(toList());
+        .collect(Collectors.toList());
   }
 }
