@@ -38,6 +38,7 @@ import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.SPACE;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.hisp.dhis.analytics.AggregationType.CUSTOM;
 import static org.hisp.dhis.analytics.AggregationType.NONE;
 import static org.hisp.dhis.analytics.AnalyticsConstants.DATE_PERIOD_STRUCT_ALIAS;
@@ -49,8 +50,8 @@ import static org.hisp.dhis.analytics.SortOrder.DESC;
 import static org.hisp.dhis.analytics.event.data.EnrollmentQueryHelper.getHeaderColumns;
 import static org.hisp.dhis.analytics.event.data.EnrollmentQueryHelper.getOrgUnitLevelColumns;
 import static org.hisp.dhis.analytics.event.data.EnrollmentQueryHelper.getPeriodColumns;
-import static org.hisp.dhis.analytics.table.JdbcEventAnalyticsTableManager.OU_GEOMETRY_COL_SUFFIX;
-import static org.hisp.dhis.analytics.table.JdbcEventAnalyticsTableManager.OU_NAME_COL_SUFFIX;
+import static org.hisp.dhis.analytics.table.AbstractEventJdbcTableManager.OU_GEOMETRY_COL_SUFFIX;
+import static org.hisp.dhis.analytics.table.AbstractEventJdbcTableManager.OU_NAME_COL_SUFFIX;
 import static org.hisp.dhis.analytics.util.AnalyticsUtils.replaceStringBetween;
 import static org.hisp.dhis.analytics.util.AnalyticsUtils.throwIllegalQueryEx;
 import static org.hisp.dhis.analytics.util.AnalyticsUtils.withExceptionHandling;
@@ -61,6 +62,8 @@ import static org.hisp.dhis.common.DimensionalObjectUtils.COMPOSITE_DIM_OBJECT_P
 import static org.hisp.dhis.common.QueryOperator.IN;
 import static org.hisp.dhis.common.RequestTypeAware.EndpointItem.ENROLLMENT;
 import static org.hisp.dhis.commons.util.TextUtils.getCommaDelimitedString;
+import static org.hisp.dhis.external.conf.ConfigurationKey.ANALYTICS_DATABASE;
+import static org.hisp.dhis.feedback.ErrorCode.E7149;
 import static org.hisp.dhis.system.util.MathUtils.getRounded;
 import static org.springframework.transaction.annotation.Propagation.REQUIRES_NEW;
 
@@ -75,10 +78,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collector;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import javax.annotation.Nonnull;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -89,11 +94,15 @@ import org.apache.commons.lang3.time.DateFormatUtils;
 import org.apache.commons.lang3.time.DateUtils;
 import org.hisp.dhis.analytics.AggregationType;
 import org.hisp.dhis.analytics.EventOutputType;
+import org.hisp.dhis.analytics.MeasureFilter;
 import org.hisp.dhis.analytics.SortOrder;
 import org.hisp.dhis.analytics.analyze.ExecutionPlanStore;
+import org.hisp.dhis.analytics.common.CteContext;
+import org.hisp.dhis.analytics.common.CteDefinition;
 import org.hisp.dhis.analytics.common.ProgramIndicatorSubqueryBuilder;
 import org.hisp.dhis.analytics.event.EventQueryParams;
 import org.hisp.dhis.analytics.util.AnalyticsUtils;
+import org.hisp.dhis.analytics.util.sql.SqlConditionJoiner;
 import org.hisp.dhis.common.DimensionType;
 import org.hisp.dhis.common.DimensionalItemObject;
 import org.hisp.dhis.common.DimensionalObject;
@@ -102,22 +111,27 @@ import org.hisp.dhis.common.Grid;
 import org.hisp.dhis.common.GridHeader;
 import org.hisp.dhis.common.IdScheme;
 import org.hisp.dhis.common.IdentifiableObject;
+import org.hisp.dhis.common.IllegalQueryException;
 import org.hisp.dhis.common.InQueryFilter;
 import org.hisp.dhis.common.QueryFilter;
 import org.hisp.dhis.common.QueryItem;
+import org.hisp.dhis.common.QueryOperator;
 import org.hisp.dhis.common.Reference;
 import org.hisp.dhis.common.RepeatableStageParams;
 import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.commons.collection.ListUtils;
 import org.hisp.dhis.commons.util.SqlHelper;
 import org.hisp.dhis.commons.util.TextUtils;
+import org.hisp.dhis.db.sql.AnalyticsSqlBuilder;
 import org.hisp.dhis.db.sql.SqlBuilder;
+import org.hisp.dhis.external.conf.DhisConfigurationProvider;
 import org.hisp.dhis.feedback.ErrorCode;
 import org.hisp.dhis.option.Option;
 import org.hisp.dhis.period.Period;
 import org.hisp.dhis.program.AnalyticsType;
 import org.hisp.dhis.program.ProgramIndicator;
 import org.hisp.dhis.program.ProgramIndicatorService;
+import org.hisp.dhis.setting.SystemSettingsService;
 import org.hisp.dhis.system.util.MathUtils;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -163,13 +177,21 @@ public abstract class AbstractJdbcEventAnalyticsManager {
 
   protected final SqlBuilder sqlBuilder;
 
+  protected final SystemSettingsService settingsService;
+
+  private final DhisConfigurationProvider config;
+
+  private final OrganisationUnitResolver organisationUnitResolver;
+
+  private final AnalyticsSqlBuilder analyticsSqlBuilder;
+
   /**
    * Returns a SQL paging clause.
    *
    * @param params the {@link EventQueryParams}.
    * @param maxLimit the configurable max limit of records.
    */
-  private String getPagingClause(EventQueryParams params, int maxLimit) {
+  protected String getPagingClause(EventQueryParams params, int maxLimit) {
     String sql = "";
 
     if (params.isPaging()) {
@@ -191,7 +213,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
    *
    * @param params the {@link EventQueryParams}.
    */
-  private String getSortClause(EventQueryParams params) {
+  protected String getSortClause(EventQueryParams params) {
     String sql = "";
 
     if (params.isSorting()) {
@@ -329,7 +351,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
    * period will not be present in the query, so add it to the select columns and skip it in the
    * group by columns.
    */
-  private void addDimensionSelectColumns(
+  protected void addDimensionSelectColumns(
       List<String> columns, EventQueryParams params, boolean isGroupByClause) {
     params
         .getDimensions()
@@ -375,8 +397,9 @@ public abstract class AbstractJdbcEventAnalyticsManager {
                     singleQuote(period.getIsoDate()) + " as " + period.getPeriodType().getName());
               } else {
                 throw new IllegalStateException(
-                    "Program indicator non-default boundary query must have "
-                        + "exactly one period, or no periods and a period filter");
+                    """
+                    Program indicator non-default boundary query must have \"
+                    exactly one period, or no periods and a period filter""");
               }
             });
   }
@@ -412,7 +435,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
    * @param queryItem
    * @return true when eligible for row context
    */
-  private boolean rowContextAllowedAndNeeded(EventQueryParams params, QueryItem queryItem) {
+  protected boolean rowContextAllowedAndNeeded(EventQueryParams params, QueryItem queryItem) {
     return params.getEndpointItem() == ENROLLMENT
         && params.isRowContext()
         && queryItem.hasProgramStage()
@@ -455,7 +478,6 @@ public abstract class AbstractJdbcEventAnalyticsManager {
     } else if (queryItem.getValueType() == ValueType.NUMBER && !isGroupByClause) {
       ColumnAndAlias columnAndAlias =
           getColumnAndAlias(queryItem, isAggregated, queryItem.getItemName());
-
       return ColumnAndAlias.ofColumnAndAlias(
           columnAndAlias.getColumn(),
           defaultIfNull(columnAndAlias.getAlias(), queryItem.getItemName()));
@@ -532,14 +554,10 @@ public abstract class AbstractJdbcEventAnalyticsManager {
   @Transactional(readOnly = true, propagation = REQUIRES_NEW)
   public Grid getAggregatedEventData(EventQueryParams params, Grid grid, int maxLimit) {
     String aggregateClause = getAggregateClause(params);
+    String columns = StringUtils.join(getSelectColumns(params, true), ",");
 
     String sql =
-        TextUtils.removeLastComma(
-            "select "
-                + aggregateClause
-                + " as value,"
-                + StringUtils.join(getSelectColumns(params, true), ",")
-                + " ");
+        TextUtils.removeLastComma("select " + aggregateClause + " as value," + columns + " ");
 
     // ---------------------------------------------------------------------
     // Criteria
@@ -557,6 +575,13 @@ public abstract class AbstractJdbcEventAnalyticsManager {
 
     if (params.hasSortOrder()) {
       sql += "order by value " + params.getSortOrder().toString().toLowerCase() + " ";
+    }
+
+    // ---------------------------------------------------------------------
+    // Filtering criteria
+    // ---------------------------------------------------------------------
+    if (params.hasMeasureCriteria()) {
+      sql += getMeasureCriteriaSql(params, aggregateClause);
     }
 
     // ---------------------------------------------------------------------
@@ -616,17 +641,12 @@ public abstract class AbstractJdbcEventAnalyticsManager {
 
       if (params.isAggregateData()) {
         if (params.hasValueDimension()) {
-          String itemId =
-              params.getProgram().getUid()
-                  + COMPOSITE_DIM_OBJECT_PLAIN_SEP
-                  + params.getValue().getUid();
-          grid.addValue(itemId);
+          grid.addValue(getItemId(params));
         } else if (params.hasProgramIndicatorDimension()) {
           grid.addValue(params.getProgramIndicator().getUid());
         }
       } else {
         for (QueryItem queryItem : params.getItems()) {
-
           ColumnAndAlias columnAndAlias = getColumnAndAlias(queryItem, params, false, true);
           String alias = columnAndAlias.getAlias();
 
@@ -689,6 +709,25 @@ public abstract class AbstractJdbcEventAnalyticsManager {
         grid.addNullValues(NUMERATOR_DENOMINATOR_PROPERTIES_COUNT);
       }
     }
+  }
+
+  /**
+   * Builds the item identifier, so it can be identifiable in the response/row object.
+   *
+   * @param params the current {@link EventQueryParams}.
+   * @return the item identifier.
+   */
+  private String getItemId(@Nonnull EventQueryParams params) {
+    String programUid = params.getProgram().getUid();
+    String dimensionUid = params.getValue().getUid();
+    String optionUid = params.getOption() == null ? EMPTY : params.getOption().getUid();
+    String itemId = programUid + COMPOSITE_DIM_OBJECT_PLAIN_SEP + dimensionUid;
+
+    if (isNotBlank(optionUid)) {
+      itemId += COMPOSITE_DIM_OBJECT_PLAIN_SEP + optionUid;
+    }
+
+    return itemId;
   }
 
   /**
@@ -806,7 +845,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
    *
    * @param item the {@link QueryItem}.
    * @param suffix the suffix.
-   * @return the the column select statement for the given item.
+   * @return the column select statement for the given item.
    */
   protected String getColumn(QueryItem item, String suffix) {
     return quote(item.getItemName() + suffix);
@@ -909,6 +948,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
     } else if (DimensionType.ORGANISATION_UNIT_GROUP_SET == dimension.getDimensionType()) {
       return params
           .getOrgUnitField()
+          .withSqlBuilder(sqlBuilder)
           .getOrgUnitGroupSetCol(col, getAnalyticsType(), isGroupByClause);
     } else {
       return quoteAlias(col);
@@ -948,7 +988,9 @@ public abstract class AbstractJdbcEventAnalyticsManager {
 
     sql += getFromClause(params);
 
-    sql += getWhereClause(params);
+    String whereClause = getWhereClause(params);
+    String filterWhereClause = getQueryItemsAndFiltersWhereClause(params, new SqlHelper());
+    sql += SqlConditionJoiner.joinSqlConditions(whereClause, filterWhereClause);
 
     String headerColumns = getHeaderColumns(headers, sql).stream().collect(joining(","));
     String orgColumns = getOrgUnitLevelColumns(params).stream().collect(joining(","));
@@ -1038,6 +1080,8 @@ public abstract class AbstractJdbcEventAnalyticsManager {
       } catch (Exception e) {
         grid.addValue(json);
       }
+    } else if (header.getValueType() == ValueType.DATETIME) {
+      grid.addValue(analyticsSqlBuilder.renderTimestamp(sqlRowSet.getString(index)));
     } else {
       grid.addValue(StringUtils.trimToNull(sqlRowSet.getString(index)));
     }
@@ -1083,13 +1127,18 @@ public abstract class AbstractJdbcEventAnalyticsManager {
     }
   }
 
+  protected String getQueryItemsAndFiltersWhereClause(EventQueryParams params, SqlHelper helper) {
+    return getQueryItemsAndFiltersWhereClause(params, Set.of(), helper);
+  }
+
   /**
    * Returns a SQL where clause string for query items and query item filters.
    *
    * @param params the {@link EventQueryParams}.
    * @param helper the {@link SqlHelper}.
    */
-  protected String getQueryItemsAndFiltersWhereClause(EventQueryParams params, SqlHelper helper) {
+  protected String getQueryItemsAndFiltersWhereClause(
+      EventQueryParams params, Set<QueryItem> exclude, SqlHelper helper) {
     if (params.isEnhancedCondition()) {
       return getItemsSqlForEnhancedConditions(params, helper);
     }
@@ -1100,6 +1149,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
     Map<Boolean, List<QueryItem>> itemsByRepeatableFlag =
         Stream.concat(params.getItems().stream(), params.getItemFilters().stream())
             .filter(QueryItem::hasFilter)
+            .filter(queryItem -> !exclude.contains(queryItem))
             .collect(
                 groupingBy(
                     queryItem ->
@@ -1117,13 +1167,13 @@ public abstract class AbstractJdbcEventAnalyticsManager {
     List<String> orConditions =
         repeatableConditionsByIdentifier.values().stream()
             .map(sameGroup -> joinSql(sameGroup, OR_JOINER))
-            .collect(toList());
+            .toList();
 
     // Non-repeatable conditions
     List<String> andConditions =
         asSqlCollection(itemsByRepeatableFlag.get(false), params)
             .map(IdentifiableSql::getSql)
-            .collect(toList());
+            .toList();
 
     if (orConditions.isEmpty() && andConditions.isEmpty()) {
       return StringUtils.EMPTY;
@@ -1177,7 +1227,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
     return joinSql(conditions.collect(toList()), joiner);
   }
 
-  private String getItemsSqlForEnhancedConditions(EventQueryParams params, SqlHelper hlp) {
+  protected String getItemsSqlForEnhancedConditions(EventQueryParams params, SqlHelper hlp) {
     Map<UUID, String> sqlConditionByGroup =
         Stream.concat(params.getItems().stream(), params.getItemFilters().stream())
             .filter(QueryItem::hasFilter)
@@ -1241,28 +1291,34 @@ public abstract class AbstractJdbcEventAnalyticsManager {
 
   @Getter
   @Builder
-  private static class IdentifiableSql {
+  public static class IdentifiableSql {
     private final String identifier;
 
     private final String sql;
   }
 
   /**
-   * Creates a SQL statement for a single filter inside a query item.
+   * Creates a SQL statement for a single filter inside a query item. Made public for testing
+   * purposes.
    *
    * @param item the {@link QueryItem}.
    * @param filter the {@link QueryFilter}.
    * @param params the {@link EventQueryParams}.
    */
-  private String toSql(QueryItem item, QueryFilter filter, EventQueryParams params) {
+  public String toSql(QueryItem item, QueryFilter filter, EventQueryParams params) {
     String field =
         item.hasAggregationType()
             ? getSelectSql(filter, item, params)
             : getSelectSql(filter, item, params.getEarliestStartDate(), params.getLatestEndDate());
 
+    String filterString =
+        item.getValueType() == ValueType.ORGANISATION_UNIT
+            ? organisationUnitResolver.resolveOrgUnits(filter, params.getUserOrgUnits())
+            : filter.getFilter();
+
     if (IN.equals(filter.getOperator())) {
       InQueryFilter inQueryFilter =
-          new InQueryFilter(field, sqlBuilder.escape(filter.getFilter()), item.isText());
+          new InQueryFilter(field, sqlBuilder.escape(filterString), !item.isNumeric());
 
       return inQueryFilter.getSqlFilter();
     } else {
@@ -1388,11 +1444,124 @@ public abstract class AbstractJdbcEventAnalyticsManager {
 
     String args =
         fields.stream()
-            .filter(f -> f != null && !f.isBlank())
+            .filter(StringUtils::isNotBlank)
             .map(f -> sqlBuilder.quoteAx(f))
             .collect(Collectors.joining(","));
 
-    return args.isEmpty() ? defaultColumnName : "coalesce(" + args + ")";
+    String sql = String.format("coalesce(%s)", args);
+
+    return args.isEmpty() ? defaultColumnName : sql;
+  }
+
+  protected List<String> getSelectColumnsWithCTE(EventQueryParams params, CteContext cteContext) {
+    List<String> columns = new ArrayList<>();
+
+    // Mirror the logic of addDimensionSelectColumns
+    addDimensionSelectColumns(columns, params, false);
+
+    // Mirror the logic of addItemSelectColumns but with CTE references
+    for (QueryItem queryItem : params.getItems()) {
+      if (queryItem.isProgramIndicator()) {
+        // For program indicators, use CTE reference
+        String piUid = queryItem.getItem().getUid();
+        CteDefinition cteDef = cteContext.getDefinitionByItemUid(piUid);
+        // COALESCE(fbyta.value, 0) as CH6wamtY9kK
+        String col =
+            cteDef.isRequiresCoalesce()
+                ? "coalesce(%s.value, 0) as %s".formatted(cteDef.getAlias(), piUid)
+                : "%s.value as %s".formatted(cteDef.getAlias(), piUid);
+        columns.add(col);
+      } else if (ValueType.COORDINATE == queryItem.getValueType()) {
+        // Handle coordinates
+        columns.add(getCoordinateColumn(queryItem).asSql());
+      } else if (ValueType.ORGANISATION_UNIT == queryItem.getValueType()) {
+        // Handle org units
+        if (params.getCoordinateFields().stream()
+            .anyMatch(f -> queryItem.getItem().getUid().equals(f))) {
+          columns.add(getCoordinateColumn(queryItem, OU_GEOMETRY_COL_SUFFIX).asSql());
+        } else {
+          columns.add(getOrgUnitQueryItemColumnAndAlias(params, queryItem).asSql());
+        }
+      } else if (queryItem.hasProgramStage()) {
+        // Handle program stage items with CTE
+        columns.add(getColumnWithCte(queryItem, cteContext));
+      } else {
+        // Handle other types as before
+        ColumnAndAlias columnAndAlias = getColumnAndAlias(queryItem, false, "");
+        columns.add(columnAndAlias.asSql());
+      }
+    }
+    // Remove duplicates
+    return columns.stream().distinct().toList();
+  }
+
+  /**
+   * Determines if the experimental analytics query engine should be used. The experimental
+   * analytics query engine is used when the analytics database is set to Doris or when the setting
+   * is enabled. When the experimental analytics query engine is used, all enrollment and event
+   * queries are constructed using CTE (Common Table Expressions) instead of subqueries.
+   *
+   * @return true if the experimental analytics query engine should be used, false otherwise.
+   */
+  protected boolean useExperimentalAnalyticsQueryEngine() {
+    return "doris".equalsIgnoreCase(config.getPropertyOrDefault(ANALYTICS_DATABASE, "").trim())
+        || this.settingsService.getCurrentSettings().getUseExperimentalAnalyticsQueryEngine();
+  }
+
+  /**
+   * Returns the "having" clause for the aggregated query. The "having" clause is calculated based
+   * on the measure criteria in the {@link EventQueryParams} and the existing aggregate clause. The
+   * expression has to be first cast to a numeric type and then rounded to 10 decimal places,
+   * otherwise the comparison may fail due to floating point precision issues in Postgres.
+   *
+   * @param params the {@link EventQueryParams}
+   * @param aggregateClause the aggregate clause to use in the SQL
+   * @return the "having" clause
+   */
+  protected String getMeasureCriteriaSql(EventQueryParams params, String aggregateClause) {
+    SqlHelper sqlHelper = new SqlHelper();
+    StringBuilder builder = new StringBuilder();
+
+    for (MeasureFilter filter : params.getMeasureCriteria().keySet()) {
+      Double criterion = params.getMeasureCriteria().get(filter);
+
+      String sqlFilter =
+          String.format(
+              " round(%s, 10) %s %s ",
+              sqlBuilder.cast(aggregateClause, org.hisp.dhis.analytics.DataType.NUMERIC),
+              getOperatorByMeasureFilter(filter),
+              criterion);
+
+      builder.append(sqlHelper.havingAnd()).append(sqlFilter);
+    }
+
+    return builder.toString();
+  }
+
+  private String getOperatorByMeasureFilter(MeasureFilter filter) {
+    QueryOperator qo = QueryOperator.fromString(filter.toString());
+    if (qo != null) {
+      return qo.getValue();
+    }
+    throw new IllegalQueryException(E7149, filter.toString());
+  }
+
+  /**
+   * Transforms the query item filters into an "and" separated SQL string. For instance, if the
+   * query item has filters with values "a" and "b" and the operator is "eq", the resulting SQL
+   * string will be "column = 'a' and column = 'b'". If the query item has no filters, an empty
+   * string is returned.
+   *
+   * @param item the {@link QueryItem}.
+   * @param columnName the column name.
+   * @return the SQL string.
+   */
+  protected String extractFiltersAsSql(QueryItem item, String columnName) {
+    return item.getFilters().stream()
+        .map(
+            f ->
+                "%s %s %s".formatted(columnName, f.getOperator().getValue(), getSqlFilter(f, item)))
+        .collect(Collectors.joining(" and "));
   }
 
   /**
@@ -1401,6 +1570,9 @@ public abstract class AbstractJdbcEventAnalyticsManager {
    * @param params the {@link EventQueryParams}.
    */
   protected abstract String getSelectClause(EventQueryParams params);
+
+  /** Returns the column name associated with the CTE */
+  protected abstract String getColumnWithCte(QueryItem item, CteContext cteContext);
 
   /**
    * Generates the SQL for the from-clause. Generally this means which analytics table to get data
